Fixed alignment. Changed background color. Added text line-size.

--- a/Certifications/Tribute_Page/styles.css
+++ b/Certifications/Tribute_Page/styles.css
@@ -1,15 +1,15 @@
 body {
   font-family: sans-serif, Arial, Helvetica, sans-serif;
-  background-color: #D2B48C;
-  
+  background-color: #D2B48C;  
 }
 
 header {
-  background-color: #8B4513;
-  width: 60%;
+  background-color: #8d4613a7;
+  width: 80%;
   height: 15%;
-  margin: 0 auto;
-  padding: 0;
+  margin: -10px auto;
+  padding: 10px;
+  padding-bottom: 20px;
 }
 
 img {
@@ -25,6 +25,10 @@ h1, .tribute-info {
   align-content: center;
 }
 
+h1, h3 {
+  text-decoration: underline;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -33,14 +37,14 @@ h1, .tribute-info {
 .text {
   grid-column: 1;
   margin: 20px;
-  margin-left: 40px;
+  margin-left: 18.5%;
   text-align: justify;
 }
 
 .images {
   grid-column: 2;
   text-align: center;
-  margin: 20px; 
+  margin: 25px 10% 0 20px;
 }
 
 figcaption {
@@ -48,5 +52,6 @@ figcaption {
 }
 
 p {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
+  line-height: 1.5;
 }
